Fix index page content section overlap

--- a/app/assets/stylesheets/components/contentSection.scss
+++ b/app/assets/stylesheets/components/contentSection.scss
@@ -71,7 +71,6 @@
   }
 
   .contentSection-body.mod-fill-vertical-space {
-    height: 100%;
 
     // Safari behaves differently in this case from Chrome and Firefox.
     // If height: 100%; is applied, it calculates the height to be 0px.
@@ -82,6 +81,12 @@
     &.safari-only {
       height: initial;
     }
+
+    @media (min-width: 800px) {
+      height: 100%;
+    }
+
+
   }
 
 .contentSection.mod-overlap-top-image {
